compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/specialNames/classObjectCopiedField.fir.kt
// COMPARE_WITH_LIGHT_TREE

class C {
    companion object {
        val X = 1
        <!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>val `X$1`<!> = 1<!>
    }

    <!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>val X<!> = 1<!>
}
